--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "framework": "React"
   },
   "scripts": {
+    "postinstall": "weapp-tw patch",
     "build:weapp": "taro build --type weapp",
     "build:swan": "taro build --type swan",
     "build:alipay": "taro build --type alipay",
@@ -36,50 +37,54 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
+    "@taro-hooks/plugin-react": "2",
+    "@taro-hooks/shared": "2",
     "@tarojs/components": "4.0.8",
     "@tarojs/helper": "4.0.8",
-    "@tarojs/plugin-platform-weapp": "4.0.8",
+    "@tarojs/plugin-framework-react": "4.0.8",
     "@tarojs/plugin-platform-alipay": "4.0.8",
-    "@tarojs/plugin-platform-tt": "4.0.8",
-    "@tarojs/plugin-platform-swan": "4.0.8",
+    "@tarojs/plugin-platform-h5": "4.0.8",
     "@tarojs/plugin-platform-jd": "4.0.8",
     "@tarojs/plugin-platform-qq": "4.0.8",
-    "@tarojs/plugin-platform-h5": "4.0.8",
+    "@tarojs/plugin-platform-swan": "4.0.8",
+    "@tarojs/plugin-platform-tt": "4.0.8",
+    "@tarojs/plugin-platform-weapp": "4.0.8",
+    "@tarojs/react": "4.0.8",
     "@tarojs/runtime": "4.0.8",
     "@tarojs/shared": "4.0.8",
     "@tarojs/taro": "4.0.8",
-    "@taro-hooks/shared": "2",
-    "@tarojs/plugin-framework-react": "4.0.8",
-    "@tarojs/react": "4.0.8",
-    "@taro-hooks/plugin-react": "2",
-    "react-dom": "^18.0.0",
     "react": "^18.0.0",
-    "taro-hooks": "2"
+    "react-dom": "^18.0.0",
+    "taro-hooks": "2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.13.3",
-    "@babel/plugin-proposal-class-properties": "7.14.5",
     "@babel/core": "^7.8.0",
+    "@babel/plugin-proposal-class-properties": "7.14.5",
+    "@babel/preset-react": "^7.24.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
     "@tarojs/cli": "4.0.8",
-    "babel-preset-taro": "4.0.8",
-    "eslint-config-taro": "4.0.8",
-    "eslint": "^8.12.0",
-    "stylelint": "^14.4.0",
-    "@types/webpack-env": "^1.13.6",
-    "webpack": "5.91.0",
     "@tarojs/taro-loader": "4.0.8",
     "@tarojs/webpack5-runner": "4.0.8",
-    "@babel/preset-react": "^7.24.1",
     "@types/react": "^18.0.0",
-    "eslint-plugin-react": "^7.8.2",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "react-refresh": "^0.11.0",
-    "@typescript-eslint/parser": "^6.2.0",
+    "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "typescript": "^5.1.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "autoprefixer": "^10.4.20",
+    "babel-plugin-import": "^1.13.3",
+    "babel-preset-taro": "4.0.8",
+    "eslint": "^8.12.0",
+    "eslint-config-taro": "4.0.8",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "postcss": "^8.4.49",
+    "react-refresh": "^0.11.0",
+    "stylelint": "^14.4.0",
+    "tailwindcss": "^3.4.17",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
-    "postcss": "^8.4.18"
+    "typescript": "^5.1.0",
+    "weapp-tailwindcss": "^3.7.0",
+    "webpack": "5.91.0"
   }
 }
